# machine_translate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  grpc_server.cpp  test.html  web_server.cpp
docs/: README.md  nginx流程.md
docs/nginx-book/: README.rst
docs/nginx-tutorial/examples/nginx-1.14.0/: nginx-start.bat  nginx-stop.bat
docs/nginx-tutorial/examples/scripts/: build-javaapp.bat  build-reactadmin.bat  build-reactapp.bat  demo01-start.bat  demo02-start.bat  demo03-start.bat  demo04-start.bat  demo05-start.bat  demo06-start.bat
include/: web_server.h
nginx/: README.md
nginx/objs/: ngx_auto_config.h  ngx_modules.c
nginx/src/core/: nginx.c  nginx.c.bak  ngx_cycle.c  ngx_log.c  ngx_slab.c
nginx/src/os/unix/: ngx_daemon.c  ngx_errno.c  ngx_process.c  ngx_process_cycle.c  ngx_time.c
protos/: helloworld.proto
python/: README.md  app.py  testapp.py  trans2image.py  trans2pdf.py
python/example/: train.py
third_part/: README.md
third_part/c-ares-1.17.2-Linux/lib/cmake/absl/: abslTargets.cmake
third_part/c-ares-1.17.2-Linux/lib/cmake/grpc/: gRPCConfigVersion.cmake  gRPCTargets-noconfig.cmake  gRPCTargets.cmake
third_part/c-ares-1.17.2-Linux/lib/cmake/protobuf/: protobuf-config-version.cmake  protobuf-targets.cmake  (+1 more)
third_part/c-ares-1.17.2-Linux/lib/pkgconfig/: absl_algorithm.pc  absl_algorithm_container.pc  absl_any.pc  absl_any_invocable.pc  absl_atomic_hook.pc  absl_bad_any_cast.pc  absl_bad_any_cast_impl.pc  absl_bad_optional_access.pc  absl_bad_variant_access.pc  absl_base.pc  absl_base_internal.pc  absl_bind_front.pc  absl_bits.pc  absl_btree.pc  absl_city.pc  absl_civil_time.pc  absl_cleanup.pc  absl_cleanup_internal.pc  absl_compare.pc  absl_compressed_tuple.pc  absl_config.pc  absl_container_common.pc  absl_container_memory.pc  absl_cord.pc  absl_cord_internal.pc  absl_cordz_functions.pc  absl_cordz_handle.pc  absl_cordz_info.pc  absl_cordz_sample_token.pc  absl_cordz_statistics.pc  absl_cordz_update_scope.pc  absl_cordz_update_tracker.pc  absl_core_headers.pc  absl_counting_allocator.pc  absl_debugging.pc  absl_debugging_internal.pc  absl_demangle_internal.pc  absl_dynamic_annotations.pc  absl_endian.pc  absl_errno_saver.pc  (+105 more)
third_part/mt/: package-lock.json  package.json
third_part/nginx1.9.2_doc/reading-code-of-nginx-1.9.2-master/nginx-1.9.2/: 配置_中文.c
third_part/vue-base/: README.md  package-lock.json  package.json
third_part/vue-base-login/: README.md  package-lock.json  package.json
vue/: README.md  package-lock.json  package.json
vue/src/: main.js  routes.js
vue/src/components/: Nav.vue
vue/src/pages/: File.vue
(+30 files in other folders)
